--- a/LaundryBook/appsettings.json
+++ b/LaundryBook/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=vask_en_tid;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
