--- a/LaundryBook/appsettings.json
+++ b/LaundryBook/appsettings.json
@@ -5,10 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-
   "AllowedHosts": "*",
-
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=vask_en_tid;Trusted_Connection=True;TrustServerCertificate=True"
+    "LaundryDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=vask_en_tid;Integrated Security=True;TrustServerCertificate=True"
   }
 }
+
